# ml-interview-drill

./: .gitattributes  .gitignore  Dockerfile  README.md  extract_exercises.py  ingest.py  main.py  pyproject.toml  requirements.txt
api/: cheatsheet.py  codelearn.py  drill.py  evaluate.py  exercises.py  journal.py  progress.py  study_guide.py
core/: book_exercises.py  cache.py  cheatsheet_data.py  code_catalog.py  evaluator.py  hf_sync.py  journal.py  question_generator.py  questions.py  questions_agentic.py  questions_chip.py  questions_deep_arch.py  questions_geron.py  questions_goodfellow.py  questions_interview_sim.py  questions_traditional_ml.py  rag.py
data/: study_guide.json
data/code_projects/openai_sdk/deep_research/: email_agent.py
frontend/: index.html
frontend/components/: BookExScreens.js  CheatSheetScreen.js  DrillMenuScreen.js  DrillScreens.js  FrameworkLearnScreen.js  JournalScreens.js  ProgressScreens.js  StudyGuideScreen.js
notes/: README.md
